# genai-agent-orchestrator

./: .env.example  .gitignore  ARCHITECTURE.md  DECISION_LOG.md  EXTENSION_POINTS.md  README.md  evaluations.jsonl  pyproject.toml  verify_structure.py
agents/: analyst_agent.py  base.py  critic_agent.py  evaluation_agent.py  general_agent.py  planner.py  planner_agent.py  retrieval_agent.py  validator_agent.py
app/: dependencies.py  main.py
app/api/: orchestrate.py
app/core/: config.py  logging.py
cost/: __init__.py  estimator.py  model_pricing.py
enforcement/: __init__.py  audit.py  config.py  graduation_evaluator.py  graduation_rules.py
evaluation/: __init__.py  file_store.py  reader.py  store.py
llm/: azure_openai.py  langchain_adapter.py
mcp/tools/: __init__.py  base.py  calculator.py  registry.py  retrieval.py
mcp_client/: executor.py  registry.py
memory/: __init__.py  session_store.py  types.py
observability/: __init__.py  collector.py  llmops_publisher.py  sink.py  trace.py
orchestration/: executor.py  planner.py  router.py  state.py
policy/: __init__.py  evaluator.py  rules.py  simulator.py
prompts/: agents.yaml
schemas/: plan.py  request.py  response.py  result.py
sla/: __init__.py  classifier.py  config.py  impact_report.py  simulator.py
tests/: conftest.py  test_critic_pure.py  test_e2e.py  test_e2e_flow.py  test_executor_pure.py  test_llmops_publisher.py  test_planner_robustness.py  test_retrieval_pure.py  test_router.py  test_tools.py
validation/: __init__.py  outcome_validator.py  report.py
